--- a/package.json
+++ b/package.json
@@ -5,4 +5,10 @@
     "author": "CARLOS",
     "contributors": [],
     "dependencies": {}
-}
+   },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+        }
