--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "contributors": [],
     "dependencies": {},
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "start": "react-scripts start"
         }
    }
